--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://aterenin.github.io/academic-workshop"
+base_url = "https://YaleACL.github.io/PACE25"
 compile_sass = true
 build_search_index = false
 generate_feeds = false
@@ -13,7 +13,7 @@ smart_punctuation = true
 footer_text = "The 2nd Yale Symposium, New Haven, CT, USA - Friday, April 11th, 2025."
 title = {tagline = "   ", title = "The 2nd Yale Symposium", subtitles = ["on Privacy, Accountability, Verification and Economics of Blockchain Systems"]}
 banner = {extension = "jpg", size = "fixed", fade = false}
-# buttons = [{name = "Website", url = "https://aterenin.github.io/academic-workshop"}, {name="GitHub", url="http://github.com/aterenin/academic-workshop"}]
+# buttons = [{name = "Website", url = "https://YaleACL.github.io/PACE25"}, {name="GitHub", url="http://github.com/YaleACL/PACE25"}]
 image = {resize = 400, ext = '.jpg'}
 list_page_limit = 10
 header_pages = [{name = "Home", url = "/#home"},{name = "Previous Editions", url = "./previous"}]
