--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://YaleACL.github.io/PACE25"
+base_url = "https://YaleACL.github.io/pace25"
 compile_sass = true
 build_search_index = false
 generate_feeds = false
@@ -11,9 +11,9 @@ smart_punctuation = true
 
 [extra]
 footer_text = "The 2nd Yale Symposium, New Haven, CT, USA - Friday, April 11th, 2025."
-title = {tagline = "   ", title = "The 2nd Yale Symposium", subtitles = ["on Privacy, Accountability, Verification and Economics of Blockchain Systems", "Friday, April 11th, 2025", "New Haven, CT, USA"]}
+title = {tagline = "   ", title = "The 2nd Yale Symposium", subtitles = ["on Privacy, Accountability, Verification and Economics of Blockchain Systems", "<small>New Haven, CT, USA on Friday, April 11th, 2025<small>"]}
 banner = {extension = "jpg", size = "fixed", fade = false}
-# buttons = [{name = "Website", url = "https://YaleACL.github.io/PACE25"}, {name="GitHub", url="http://github.com/YaleACL/PACE25"}]
+# buttons = [{name = "Website", url = "https://YaleACL.github.io/pace25"}, {name="GitHub", url="http://github.com/YaleACL/pace25"}]
 image = {resize = 400, ext = '.jpg'}
 list_page_limit = 10
 header_pages = [{name = "Home", url = "/#home"},{name = "Previous Editions", url = "./previous"}]
