--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ smart_punctuation = true
 
 [extra]
 footer_text = "The 2nd Yale Symposium, New Haven, CT, USA - Friday, April 11th, 2025."
-title = {tagline = "   ", title = "The 2nd Yale Symposium", subtitles = ["on Privacy, Accountability, Verification and Economics of Blockchain Systems", "<small>New Haven, CT, USA on Friday, April 11th, 2025<small>"]}
+title = {tagline = "   ", title = "The 2nd Yale Symposium", subtitles = ["on Privacy, Accountability, Verification and Economics of Blockchain Systems", "<small>New Haven, CT, USA on Friday, April 11th, 2025</small>"]}
 banner = {extension = "jpg", size = "fixed", fade = false}
 # buttons = [{name = "Website", url = "https://yaleacl.github.io/pace25"}, {name="GitHub", url="http://github.com/yaleacl/pace25"}]
 image = {resize = 400, ext = '.jpg'}
