--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://yaleacl.github.io/pace25"
+base_url = "https://yaleacl.github.io/pave25"
 compile_sass = true
 build_search_index = false
 generate_feeds = false
@@ -10,7 +10,7 @@ highlight_theme = "css"
 smart_punctuation = true
 
 [extra]
-footer_text = "The 2nd Yale PACE Symposium, New Haven, CT, USA - Friday, April 11th, 2025."
+footer_text = "The 2nd Yale PAVE Symposium, New Haven, CT, USA - Friday, April 11th, 2025."
 title = {tagline = "   ", title = "The 2nd Yale Symposium", subtitles = ["on Privacy, Accountability, Verification and Economics of Blockchain Systems", "<small>New Haven, CT, USA — Friday, April 11th, 2025</small>"]}
 banner = {extension = "jpg", size = "fixed", fade = false}
 buttons = [{name = "RSVP", url = "https://forms.gle/FVP38mttYY5dHqw96"}]
